--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <div class="widget">
     <img id="cover" src="" alt="Album Cover">
     <div class="info">
-      <div id="track" class="scrolling-text"></div>
+      <div id="track-container">
+  	<div id="track" class="scrolling-text"></div>
+      </div
       <div id="artist" class="artist"></div>
     </div>
   </div>
