--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <img id="cover" src="" alt="Album Cover">
     <div class="info">
       <div id="track-container">
-  	<div id="track" class="scrolling-text"></div>
-      </div
+        <div id="track" class="scrolling-text"></div>
+      </div>
       <div id="artist" class="artist"></div>
     </div>
   </div>
