--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <img id="cover" src="" alt="Album Cover">
     <div class="info">
       <div id="track-container">
-        <div id="track" class="scrolling-text"></div>
+        <div id="track-wrapper">
+          <div id="track"></div>
+        </div>
       </div>
       <div id="artist" class="artist"></div>
     </div>
